[package]
name = "rust_lib_nikki_albums"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[profile.release]
opt-level = 3
lto = "thin"  # 或 "fat"，可提升 10-20%

[dependencies]
rust_lib_nikki_albums_macro = { path = "macros" }

flutter_rust_bridge = "=2.12.0"
anyhow = "1.0.102"

serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3.1"
delegate = "0.13.5"
itoa = "1.0.18"
ryu = "1.0.23"
memchr = "2.8.0"
faster-hex = "0.10.0"

aes-gcm = "0.11.0"
hkdf = "0.13.0"
sha2 = "0.11.0"

zune-jpeg = "0.5.15"
zune-png = { version = "0.5.2", default-features = false, features = ["std"] }
zune-core = "0.5.1"
mp4 = "0.14.0"
rust_h264 = "0.4.0"
yuv = "0.8.14"
fast_image_resize = "6.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(frb_expand)"] }